--- a/app/src/main/res/layout/content_disp02.xml
+++ b/app/src/main/res/layout/content_disp02.xml
@@ -10,8 +10,8 @@
         tools:context=".Disp02">
 
     <ScrollView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="410dp"
+            android:layout_height="622dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
@@ -26,24 +26,32 @@
         </LinearLayout>
 
 
-
     </ScrollView>
     <Button
-            android:id="@+id/btncancel"
-            android:layout_width="120dp"
-            android:layout_height="50dp" android:text="キャンセル"
-            android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.3"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.9"/>
-    <Button
             android:id="@+id/btndelApply"
-            android:layout_width="120dp"
-            android:layout_height="50dp"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
             android:text="削除" android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.7" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.9"/>
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.050000012"/>
+    <Button
+            android:id="@+id/btncancel"
+            android:layout_width="200dp"
+            android:layout_height="60dp" android:text="キャンセル"
+            android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.050000012"/>
+
+    <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.9"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
