--- a/app/src/main/res/layout/singletable.xml
+++ b/app/src/main/res/layout/singletable.xml
@@ -10,10 +10,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/checkBox" android:visibility="gone"/>
 
+
         <Button
                 android:id="@+id/btnt"
-                android:layout_width="wrap_content"
-                android:layout_height="90dp"
+                android:layout_width="372dp"
+                android:layout_height="119dp"
                 android:layout_margin="0dp"
                 android:layout_marginStart="0dp"
                 android:layout_marginLeft="0dp"
@@ -30,7 +31,7 @@
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:text="Button"
-                android:textSize="24dp" />
-
+                android:textAlignment="center"
+                android:textSize="24dp"/>
 
 </TableRow>
